# GodotPP

./: .gitignore  CMakeLists.txt  godotpp.gdextension.in
.github/workflows/: build.yml
cmake/: DownloadGodot.cmake
game/: godotpp.gdextension.uid  icon.svg.import  project.godot
game/scenes/: game.tscn
src/: CMakeLists.txt
src/godotpp/: CMakeLists.txt
src/godotpp/include/: gd_example.h
src/godotpp/src/: gd_example.cpp  register_types.cpp
src/server/: CMakeLists.txt
